traversal - story - header cmp